# GeoAct-Paper

./: .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml
benchmark/: __init__.py  cli.py  evaluator.py  tasks.py
benchmarks/: __init__.py  cli.py  generate_charts.py
configs/: octo_baseline.yaml
geoact/: __init__.py  action_head.py  benchmark.py  cli.py  figures.py  so3.py  theory.py
geoact.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/ablation/: ablation.json
results/synthetic/: benchmark.json
results/theory/: verification.json
tests/: test_core.py
