[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoact"
version = "1.0.0"
description = "GeoAct: Geometry-Aware Action Prediction for Vision-Language-Action Models (CoRL 2026 submission)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
geoact = "geoact.cli:main"
actionrep-bench = "benchmark.cli:main"

[tool.setuptools.packages.find]
include = ["geoact*", "benchmark*"]
